tool/src/java/snapshots/diplomat_tool__java__test__callback_simple.snap
---
source: tool/src/java/mod.rs
expression: gen_struct_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.lang.invoke.VarHandle;
import java.nio.charset.StandardCharsets;
import java.lang.invoke.MethodHandles;
import java.lang.invoke.MethodType;

public class CallbackWrapper {

    static final StructLayout LAYOUT = MemoryLayout.structLayout(
        ValueLayout.JAVA_BOOLEAN.withName("cantBeEmpty")
    );
    private static final VarHandle VH_CANT_BE_EMPTY = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("cantBeEmpty"));

    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup LIB;
    private static final MethodHandle CALLBACKWRAPPER_TEST_MULTI_ARG_CALLBACK;

    static {
        System.loadLibrary("diplomat_example");
        LIB = SymbolLookup.loaderLookup();
        CALLBACKWRAPPER_TEST_MULTI_ARG_CALLBACK = LINKER.downcallHandle(
            LIB.find("CallbackWrapper_test_multi_arg_callback").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.JAVA_INT, DiplomatLib.DIPLOMAT_CALLBACK_LAYOUT, ValueLayout.JAVA_INT)
        );
    }

    @FunctionalInterface
    public interface TestMultiArgCallbackF {
        int invoke(int arg0);
    }

    private static int runCallback_testMultiArgCallback_f(MemorySegment data, int arg0) {
        @SuppressWarnings("unchecked")
        TestMultiArgCallbackF cb = DiplomatLib.getCallback(data, TestMultiArgCallbackF.class);
        return cb.invoke(arg0);
    }

    private static final MethodHandle MH_RUN_testMultiArgCallback_f;
    private static final MemorySegment UPCALL_testMultiArgCallback_f;
    static {
        try {
            MH_RUN_testMultiArgCallback_f = MethodHandles.lookup().findStatic(
                CallbackWrapper.class, "runCallback_testMultiArgCallback_f",
                MethodType.methodType(int.class, MemorySegment.class, int.class));
            UPCALL_testMultiArgCallback_f = DiplomatLib.LINKER_SHARED.upcallStub(
                MH_RUN_testMultiArgCallback_f,
                FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT),
                Arena.global());
        } catch (ReflectiveOperationException ex) {
            throw new ExceptionInInitializerError(ex);
        }
    }

    public boolean cantBeEmpty;

    public CallbackWrapper() {
    }

    CallbackWrapper(boolean cantBeEmpty) {
        this.cantBeEmpty = cantBeEmpty;
    }

    static CallbackWrapper fromNative(MemorySegment seg) {
        return new CallbackWrapper(
            (boolean) VH_CANT_BE_EMPTY.get(seg, 0L)
        );
    }

    MemorySegment toNative(Arena arena) {
        var seg = arena.allocate(LAYOUT);
        VH_CANT_BE_EMPTY.set(seg, 0L, this.cantBeEmpty);
        return seg;
    }

    public static int testMultiArgCallback(TestMultiArgCallbackF f, int x) {
        try (var arena = Arena.ofConfined()) {
            var fId = DiplomatLib.registerCallback(f);
            var fNative = arena.allocate(DiplomatLib.DIPLOMAT_CALLBACK_LAYOUT);
            DiplomatLib.VH_CB_DATA.set(fNative, 0L, fId);
            DiplomatLib.VH_CB_RUN.set(fNative, 0L, UPCALL_testMultiArgCallback_f);
            DiplomatLib.VH_CB_DESTRUCTOR.set(fNative, 0L, DiplomatLib.DESTRUCTOR_STUB);
            return (int) CALLBACKWRAPPER_TEST_MULTI_ARG_CALLBACK.invokeExact(fNative, x);
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
