tool/src/java/snapshots/diplomat_tool__java__test__callback_with_struct_param.snap
---
source: tool/src/java/mod.rs
expression: gen_all_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.lang.invoke.VarHandle;
import java.nio.charset.StandardCharsets;
import java.lang.invoke.MethodHandles;
import java.lang.invoke.MethodType;

public class CallbackWrapper {

    static final StructLayout LAYOUT = MemoryLayout.structLayout(
        ValueLayout.JAVA_BOOLEAN.withName("cantBeEmpty")
    );
    private static final VarHandle VH_CANT_BE_EMPTY = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("cantBeEmpty"));
    private static final MethodHandle CALLBACKWRAPPER_TEST_CB_WITH_STRUCT;

    static {
        CALLBACKWRAPPER_TEST_CB_WITH_STRUCT = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("CallbackWrapper_test_cb_with_struct").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.JAVA_INT, DiplomatLib.DIPLOMAT_CALLBACK_LAYOUT)
        );
    }

    @FunctionalInterface
    public interface TestCbWithStructF {
        int invoke(SomeStruct arg0);
    }

    private static int runCallback_testCbWithStruct_f(MemorySegment data, MemorySegment arg0) {
        @SuppressWarnings("unchecked")
        TestCbWithStructF cb = DiplomatLib.getCallback(data, TestCbWithStructF.class);
        return cb.invoke(SomeStruct.fromNative(arg0));
    }

    private static final MethodHandle MH_RUN_testCbWithStruct_f;
    private static final MemorySegment UPCALL_testCbWithStruct_f;
    static {
        try {
            MH_RUN_testCbWithStruct_f = MethodHandles.lookup().findStatic(
                CallbackWrapper.class, "runCallback_testCbWithStruct_f",
                MethodType.methodType(int.class, MemorySegment.class, MemorySegment.class));
            UPCALL_testCbWithStruct_f = DiplomatLib.LINKER_SHARED.upcallStub(
                MH_RUN_testCbWithStruct_f,
                FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, SomeStruct.LAYOUT),
                Arena.global());
        } catch (ReflectiveOperationException ex) {
            throw new ExceptionInInitializerError(ex);
        }
    }

    public boolean cantBeEmpty;

    public CallbackWrapper() {
    }

    CallbackWrapper(boolean cantBeEmpty) {
        this.cantBeEmpty = cantBeEmpty;
    }

    static CallbackWrapper fromNative(MemorySegment seg) {
        return new CallbackWrapper(
            (boolean) VH_CANT_BE_EMPTY.get(seg, 0L)
        );
    }

    MemorySegment toNative(Arena arena) {
        var seg = arena.allocate(LAYOUT);
        VH_CANT_BE_EMPTY.set(seg, 0L, this.cantBeEmpty);
        return seg;
    }

    void updateFromNative(MemorySegment seg) {
        this.cantBeEmpty = (boolean) VH_CANT_BE_EMPTY.get(seg, 0L);
    }

    public static int testCbWithStruct(TestCbWithStructF f) {
        try (var arena = Arena.ofConfined()) {
            var fId = DiplomatLib.registerCallback(f);
            var fNative = arena.allocate(DiplomatLib.DIPLOMAT_CALLBACK_LAYOUT);
            DiplomatLib.VH_CB_DATA.set(fNative, 0L, fId);
            DiplomatLib.VH_CB_RUN.set(fNative, 0L, UPCALL_testCbWithStruct_f);
            DiplomatLib.VH_CB_DESTRUCTOR.set(fNative, 0L, DiplomatLib.DESTRUCTOR_STUB);
            return (int) CALLBACKWRAPPER_TEST_CB_WITH_STRUCT.invokeExact(fNative);
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.lang.invoke.VarHandle;
import java.nio.charset.StandardCharsets;

public class SomeStruct {

    static final StructLayout LAYOUT = MemoryLayout.structLayout(
        ValueLayout.JAVA_INT.withName("x"),
        ValueLayout.JAVA_INT.withName("y")
    );
    private static final VarHandle VH_X = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("x"));
    private static final VarHandle VH_Y = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("y"));

    public int x;

    public int y;

    public SomeStruct() {
    }

    SomeStruct(int x, int y) {
        this.x = x;
        this.y = y;
    }

    static SomeStruct fromNative(MemorySegment seg) {
        return new SomeStruct(
            (int) VH_X.get(seg, 0L),
            (int) VH_Y.get(seg, 0L)
        );
    }

    MemorySegment toNative(Arena arena) {
        var seg = arena.allocate(LAYOUT);
        VH_X.set(seg, 0L, this.x);
        VH_Y.set(seg, 0L, this.y);
        return seg;
    }

    void updateFromNative(MemorySegment seg) {
        this.x = (int) VH_X.get(seg, 0L);
        this.y = (int) VH_Y.get(seg, 0L);
    }
}
