tool/src/java/snapshots/diplomat_tool__java__test__fallible_int_return.snap
---
source: tool/src/java/mod.rs
expression: gen_opaque_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public class Foo implements AutoCloseable {

    private static final MethodHandle DESTROY;
    private static final MethodHandle FOO_TRY_INT;
    static final StructLayout FOO_TRY_INT_RESULT = MemoryLayout.structLayout(
            ValueLayout.JAVA_INT.withName("union_val"),
            ValueLayout.JAVA_BOOLEAN.withName("is_ok"),
            MemoryLayout.paddingLayout(3)
        );

    static {
        DESTROY = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("Foo_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
        );
        FOO_TRY_INT = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("Foo_try_int").orElseThrow(),
            FunctionDescriptor.of(FOO_TRY_INT_RESULT, ValueLayout.JAVA_INT)
        );
    }

    final MemorySegment handle;

    Foo(MemorySegment handle) {
        this.handle = handle;
    }

    @Override
    public void close() {
        try {
            DESTROY.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public static int tryInt(int i) {
        try (var arena = Arena.ofConfined()) {
            var result = (MemorySegment) FOO_TRY_INT.invokeExact((SegmentAllocator) arena, i);
            var isOk = result.get(ValueLayout.JAVA_BOOLEAN, 4L);
            if (isOk) {
                return (int) result.get(ValueLayout.JAVA_INT, 0L);
            } else {
                throw new RuntimeException("Diplomat error");
            }
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
