tool/src/java/snapshots/diplomat_tool__java__test__fallible_void_return.snap
---
source: tool/src/java/mod.rs
expression: gen_opaque_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public class Foo implements AutoCloseable {

    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup LIB;

    private static final MethodHandle DESTROY;
    private static final MethodHandle FOO_DO_THING;
    static final StructLayout FOO_DO_THING_RESULT = MemoryLayout.structLayout(
            ValueLayout.JAVA_BOOLEAN.withName("is_ok")
        );

    static {
        System.loadLibrary("diplomat_example");
        LIB = SymbolLookup.loaderLookup();
        DESTROY = LINKER.downcallHandle(
            LIB.find("Foo_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
        );
        FOO_DO_THING = LINKER.downcallHandle(
            LIB.find("Foo_do_thing").orElseThrow(),
            FunctionDescriptor.of(FOO_DO_THING_RESULT, ValueLayout.ADDRESS)
        );
    }

    final MemorySegment handle;

    Foo(MemorySegment handle) {
        this.handle = handle;
    }

    @Override
    public void close() {
        try {
            DESTROY.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public void doThing() {
        try (var arena = Arena.ofConfined()) {
            var result = (MemorySegment) FOO_DO_THING.invokeExact((SegmentAllocator) arena, handle);
            var isOk = result.get(ValueLayout.JAVA_BOOLEAN, 0L);
            if (isOk) {
                return;
            } else {
                throw new RuntimeException("Diplomat error");
            }
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
