tool/src/java/snapshots/diplomat_tool__java__test__fallible_write_return.snap
---
source: tool/src/java/mod.rs
expression: gen_opaque_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public class Foo implements AutoCloseable {

    private static final MethodHandle DESTROY;
    private static final MethodHandle FOO_TRY_TO_STRING;
    static final StructLayout FOO_TRY_TO_STRING_RESULT = MemoryLayout.structLayout(
            ValueLayout.JAVA_BOOLEAN.withName("is_ok")
        );

    static {
        DESTROY = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("Foo_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
        );
        FOO_TRY_TO_STRING = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("Foo_try_to_string").orElseThrow(),
            FunctionDescriptor.of(FOO_TRY_TO_STRING_RESULT, ValueLayout.ADDRESS, ValueLayout.ADDRESS)
        );
    }

    final MemorySegment handle;

    Foo(MemorySegment handle) {
        this.handle = handle;
    }

    @Override
    public void close() {
        try {
            DESTROY.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public String tryToString() {
        var write = DiplomatLib.createWrite();
        try (var arena = Arena.ofConfined()) {
            var result = (MemorySegment) FOO_TRY_TO_STRING.invokeExact((SegmentAllocator) arena, handle, write);
            var isOk = result.get(ValueLayout.JAVA_BOOLEAN, 0L);
            if (isOk) {
                return DiplomatLib.writeToString(write);
            } else {
                DiplomatLib.destroyWrite(write);
                throw new RuntimeException("Diplomat error");
            }
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
